Broke homepage into small components, styled the home page

--- a/src/components/MenuItem/MenuItem.scss
+++ b/src/components/MenuItem/MenuItem.scss
@@ -1,17 +1,3 @@
-.HomePage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 80px;
-}
-
-.directory-menu {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
 .menu-item {
   min-width: 30%;
   height: 240px;
@@ -19,8 +5,26 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
   margin: 0 7.5px 15px;
+  position: relative;
+  overflow: hidden;
+
+  &:hover {
+    cursor: pointer;
+
+    .background-image {
+      transform: scale(1.05);
+      opacity: .8;
+    }
+
+    .content {
+      opacity: .9;
+    }
+  }
+
+  &.large {
+    height: 380px;
+  }
 
   &:first-child {
     margin-right: 7.5px;
@@ -30,6 +34,15 @@
     margin-left: 7.5px;
   }
 
+  .background-image {
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+    transition: transform 3s cubic-bezier(0.25, 0.45, 0.45, 0.95), opacity 4s ease;
+    backface-visibility: hidden;
+  }
+
   .content {
     height: 90px;
     padding: 0 25px;
@@ -37,7 +50,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
+    background-color: #fff;
+    opacity: .7;
+    position: absolute;
+    transition: opacity 1s;
 
     .title {
       font-weight: bold;
